// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountReducers should handle all defined error types: rejected types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 2`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 3`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNTS_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 4`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 5`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNTS_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 6`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 7`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 8`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 9`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 10`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 11`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 12`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 13`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 14`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 15`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 16`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 17`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 18`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`AccountReducers should handle all defined error types: rejected types 19`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 3`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 4`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {
        "cloud_account_overviews": Array [
          "success",
        ],
      },
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 5`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [
        "success",
      ],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 6`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 7`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 8`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 9`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 10`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 11`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 12`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 13`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 14`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 15`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 16`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 17`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 18`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined fulfilled types: fulfilled types 19`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 2`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 3`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNTS_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 4`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 5`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNTS_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 6`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 7`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 8`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 9`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 10`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 11`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 12`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 13`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": true,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 14`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 15`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 16`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_HIDE_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 17`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "DELETE_ACCOUNT_SHOW_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 18`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_PENDING",
}
`;

exports[`AccountReducers should handle all defined pending types: pending types 19`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "instances": Object {
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "updateAccounts": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_PENDING",
}
`;
